--- a/wp-content/themes/environics/assets/sass/site/_media-queries.scss
+++ b/wp-content/themes/environics/assets/sass/site/_media-queries.scss
@@ -57,6 +57,7 @@
 
 			.span_11 {
 				column-count: 1;
+				margin-top: 0;
 			}
 		}
 
@@ -89,6 +90,10 @@
 		.cantrust-container {
 			padding: 4rem 0;
 			@include border-bottom;
+
+			.span_6 {
+				margin-top: 0;
+			}
 		}
 
 		.cantrust-text {
@@ -201,6 +206,10 @@
 			.text-container {
 				display: block;
 				padding: 0 1rem 4rem 1rem;
+
+				.span_10 {
+					margin-top: 0;
+				}
 			}
 
 			h5 {
