--- a/wp-content/themes/environics/assets/sass/site/_posts-and-pages.scss
+++ b/wp-content/themes/environics/assets/sass/site/_posts-and-pages.scss
@@ -74,10 +74,11 @@
 
 	h1 {
 		color: $white;
-		width: 100%;
+		width: 83.333%;
 		text-align: center;
 		position: absolute;
 		top: 50%;
+		margin-left: 8.333%;
 		transform: translateY(-50%);
 	}
 }
@@ -132,10 +133,20 @@
 		.span_11 {
 			column-count: 2;
 			margin-right: 0;
+			margin-top: 2.666rem;
 
 			p {
 				margin-top: 0;
 			}
+		}
+	}
+
+	.cantrust-container {
+		border-bottom: 1px solid $grey;
+		padding-bottom: 4.5rem;
+
+		.span_6 {
+			margin-top: 2.666rem;
 		}
 	}
 }
@@ -454,7 +465,7 @@
 		position: relative;
 		margin-bottom: 0;
 		padding-left: 1rem;
-		@include font-size(2.4);
+		@include font-size(1.8);
 		@include line-height(3.4);
 
 		&:after, &:before {
@@ -571,7 +582,11 @@
 .team-container {
 
 	.text-container {
-		padding-bottom: $section-padding-top; //RA
+		padding-bottom: 4.5rem;
+
+		.span_10 {
+			margin-top: 2.666rem;
+		}
 	}
 
 	.dropdown-gallery {
@@ -589,8 +604,8 @@
 	}
 
 	h5 {
-		margin-top: 0.5rem;
-		margin-bottom: 0.5rem;
+		margin-top: 1rem;
+		margin-bottom: 1rem;
 		@include font-size(2);
 		@include line-height(2.4);
 		width: calc(100% - 2rem);
@@ -1065,7 +1080,7 @@
 			color: $darkgrey;
 			font-family: $font__bold;
 			font-weight: normal;
-			@include font-size(2.4);
+			@include font-size(1.8);
 			@include line-height(3.4);
 			text-transform: uppercase;
 			margin: 1rem 0;
